modules/crates/domain/tests/edge_type_safety/compile_fail/created_rejects_org_as_resource.stderr
error[E0277]: the trait bound `OrgId: Resource` is not satisfied
  --> tests/edge_type_safety/compile_fail/created_rejects_org_as_resource.rs:12:41
   |
12 |     let _ = Edge::new_created(&creator, &resource);
   |             -----------------           ^^^^^^^^^ the trait `Resource` is not implemented for `OrgId`
   |             |
   |             required by a bound introduced by this call
   |
   = help: the following other types implement trait `Resource`:
             AgentId
             AuthRequestId
             ConsentId
             GrantId
             MemoryId
             NodeId
             SessionId
             TemplateId
note: required by a bound in `Edge::new_created`
  --> src/model/edges.rs
   |
   |     pub fn new_created<P: Principal, R: Resource>(creator: &P, resource: &R) -> Edge {
   |                                         ^^^^^^^^ required by this bound in `Edge::new_created`
